# libreverse

./: AUTHORS  CMakeLists.txt  Doxyfile  Doxyfile.bak  Doxyfile.in  README  TODO  analysis.dot  input.dot  libtool  output.dot  update_license.sh
reverse/: CMakeLists.txt  input_types.hpp  output_types.hpp  preconditions.hpp  results.hpp  reverse.cpp  reverse.hpp  reverse.mpc  reverse_impl.cpp  reverse_impl.hpp  trace.cpp  trace.hpp  trace_area.hpp  trace_level.hpp  trace_state.cpp  trace_state.hpp  transfer_types.hpp
reverse/.deps/: libreverse_la-Reverse.Plo  libreverse_la-Trace.Plo  libreverse_la-sp_debug_hooks.Plo
reverse/.libs/: libreverse.lai
reverse/.svn/: all-wcprops  entries
reverse/.svn/text-base/: Assert.h.svn-base  Counter.h.svn-base  Create.h.svn-base  Makefile.am.old.svn-base  Reverse.cpp.svn-base  Reverse.h.svn-base  Trace.cpp.svn-base  Trace.h.svn-base  reverse.vcproj.svn-base  sp_debug_hooks.cpp.svn-base
reverse/.svn/tmp/: tempfile.4.tmp
reverse/applications/: Makefile  Makefile.am  Makefile.in
reverse/applications/.svn/: all-wcprops  entries
reverse/applications/grnn/: 10000_test  Compiler_Dump_Algorithm.hpp  Compiler_Dump_Algorithm_Factory.cpp  Compiler_Dump_Algorithm_Factory.hpp  Compression_Dump_Algorithm.hpp  Compression_Dump_Algorithm_Factory.cpp  Compression_Dump_Algorithm_Factory.hpp  Elf_Compiler_Dump_Algorithm.cpp  Elf_Compiler_Dump_Algorithm.hpp  Elf_Optimizer_Algorithm.cpp  Elf_Optimizer_Algorithm.hpp  Java_Compiler_Dump_Algorithm.cpp  Java_Compiler_Dump_Algorithm.hpp  Java_Optimizer_Algorithm.cpp  Java_Optimizer_Algorithm.hpp  Makefile  Makefile.am  Makefile.in  Optimizer_Algorithm.hpp  Optimizer_Algorithm_Factory.cpp  Optimizer_Algorithm_Factory.hpp  Optimizer_Types.hpp  Windows_Compiler_Dump_Algorithm.cpp  Windows_Compiler_Dump_Algorithm.hpp  (+29 more)
reverse/assert/: assert.hpp  bad_assert.hpp
reverse/components/: CMakeLists.txt  component_factory.cpp  component_factory.hpp  components.vcproj  null_component.cpp  null_component.hpp  test_null_component.cpp
reverse/count/: counter.hpp
reverse/data_containers/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Memory_Map.cpp.ace  Memory_Map.cpp.orig  Memory_Map.hpp.ace  Memory_Map.hpp.orig  basic_block.cpp  basic_block.hpp  control_flow_graph.cpp  control_flow_graph.hpp  control_flow_graph_sequence.cpp  control_flow_graph_sequence.hpp  data_containers.vcproj  data_types.cpp  data_types.hpp  data_types.vcproj  filename.cpp  filename.hpp  instruction.hpp  java_assembly_instruction.cpp  java_assembly_instruction.hpp  libdata_containers.la  libdata_containers_la-Basic_Block.gcno  libdata_containers_la-Basic_Block.lo  libdata_containers_la-Control_Flow_Graph.gcno  libdata_containers_la-Control_Flow_Graph.lo  libdata_containers_la-Control_Flow_Graph_Sequence.lo  libdata_containers_la-Data_Types.gcno  libdata_containers_la-Data_Types.lo  libdata_containers_la-Filename.gcno  libdata_containers_la-Filename.lo  libdata_containers_la-Java_Assembly_Instruction.lo  libdata_containers_la-Memory_Map.gcno  libdata_containers_la-Memory_Map.lo  memory_allocator.hpp  memory_map.cpp  memory_map.hpp  test_memory_map.cpp  (+1 more)
reverse/errors/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  api_exception.cpp  api_exception.hpp  component_exception.cpp  component_exception.hpp  configuration_exception.cpp  configuration_exception.hpp  cpu_exception.cpp  cpu_exception.hpp  data_source_exception.cpp  data_source_exception.hpp  errors.mpc  file_reader_exception.cpp  file_reader_exception.hpp  internal_exception.cpp  internal_exception.hpp  io_exception.cpp  io_exception.hpp  libreverse_exceptions.la  libreverse_exceptions_la-API_Exception.gcno  libreverse_exceptions_la-API_Exception.lo  libreverse_exceptions_la-CPU_Exception.gcno  libreverse_exceptions_la-CPU_Exception.lo  libreverse_exceptions_la-Component_Exception.gcno  libreverse_exceptions_la-Component_Exception.lo  libreverse_exceptions_la-Configuration_Exception.gcno  libreverse_exceptions_la-Configuration_Exception.lo  libreverse_exceptions_la-Data_Source_Exception.gcno  libreverse_exceptions_la-Data_Source_Exception.lo  libreverse_exceptions_la-File_Reader_Exception.gcno  libreverse_exceptions_la-File_Reader_Exception.lo  libreverse_exceptions_la-IO_Exception.gcno  libreverse_exceptions_la-IO_Exception.lo  libreverse_exceptions_la-Internal_Exception.gcno  libreverse_exceptions_la-Internal_Exception.lo  libreverse_exceptions_la-Meta_Exception.gcno  libreverse_exceptions_la-Meta_Exception.lo  (+10 more)
reverse/include/: Makefile  Makefile.am  Makefile.in  config.h.in  config.hpp  dummy  dummy-dummy.gcno  dummy.cpp  stamp-h1  template_macros.hpp
reverse/infrastructure/: CMakeLists.txt  Component.os  Configuration_Parser.os  Formula.xsd  Makefile  Makefile.am  Makefile.in  Master_Formula.xsd  Master_Formula_Parser.os  binary_compiler.xml  component.hpp  component_actor.hpp  component_data.cpp  component_data.hpp  component_graph.cpp  component_graph.hpp  component_source_state.cpp  component_source_state.hpp  component_state.cpp  component_state.hpp  component_state_algorithm.hpp  component_types.hpp  component_working_state.cpp  component_working_state.hpp  configuration_data.cpp  configuration_data.hpp  configuration_parser.cpp  configuration_parser.hpp  configuration_tag_names.cpp  configuration_tag_names.hpp  configurator.cpp  configurator.hpp  formula_list.cpp  formula_list.hpp  formula_parser.cpp  formula_parser.hpp  formula_tag_names.cpp  formula_tag_names.hpp  graph_test.cpp  graph_test2.cpp  (+20 more)
reverse/io/: CMakeLists.txt  byte_converter.hpp  file.cpp  file.hpp  file_id.cpp  file_id.hpp  output.hpp  string_converter.hpp  test_byte_converter.cpp  test_file.cpp  test_file_id.cpp  type_mapper.hpp
reverse/meta/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  libmeta.la  libmeta_la-Meta_Object.gcno  libmeta_la-Meta_Object.lo  meta.vcproj  meta_object.cpp  meta_object.hpp
reverse/tests/: Makefile  Makefile.am  Makefile.am.old  Makefile.in  input.dot  one_node.xml  output.dot  test_basic_graph.cpp  tests.mpc
tools/: CMakeLists.txt  elfdump.cpp  reverse.cpp
(+3533 files in other folders)
