project(input_grnn_components)

set ( INPUT_GRNN_COMPONENTS_SOURCES
  Compiler_Classifier_Algorithm_Factory.cpp
  Elf_Input_Tag_Names.cpp
  Elf_Training_Data.cpp
  Elf_Training_Data_Parser.cpp
  GRNN_Data_Entry.cpp
  GRNN_Data_Map.cpp
  GRNN_Data_Types.cpp
  Java_Classifier_Algorithm.cpp
  Java_Input_Tag_Names.cpp
  Java_Training_Data.cpp
  Java_Training_Data_Parser.cpp
  Variable_Map.cpp
  Windows_Input_Tag_Names.cpp
  Windows_Training_Data.cpp
  Windows_Training_Data_Parser.cpp )

set ( INPUT_GRNN_COMPONENTS_HEADERS
  Candidate_Solution.cpp
  Candidate_Solution.h
  Compiler_Classifier_Algorithm_Factory.h
  Configuration.cpp
  Configuration.h
  Elf_Input_Tag_Names.h
  Elf_Training_Data.h
  Elf_Training_Data_Parser.h
  GRNN.cpp
  GRNN.h
  GRNN_Data_Entry.h
  GRNN_Data_Map.h
  GRNN_Data_Types.h
  IO.cpp
  IO.h
  Java_Classifier_Algorithm.h
  Java_Input_Tag_Names.h
  Java_Training_Data.h
  Java_Training_Data_Parser.h
  Optimizer.cpp
  Optimizer.h
  Selection_Policy.cpp
  Selection_Policy.h
  Statistical.cpp
  Statistical.h
  Training_Data.cpp
  Training_Data.h
  Training_Set.cpp
  Training_Set.h
  Variable_Map.h
  Windows_Input_Tag_Names.h
  Windows_Training_Data.h
  Windows_Training_Data_Parser.h )

add_library ( input_grnn_components ${INPUT_GRNN_COMPONENTS_SOURCES} ${INPUT_GRNN_COMPONENTS_HEADERS} )

