project(io_elf)

set ( IO_ELF_SOURCES
  elf_dynamic_header_32.cpp
  elf_dynamic_header_64.cpp
  elf_dynamic_tag_32.cpp
  elf_dynamic_tag_64.cpp
  elf_file.cpp
  elf_file_header_32.cpp
  elf_file_header_64.cpp
  elf_file_header_utils.cpp
  elf_header_32.cpp
  elf_header_64.cpp
  elf_header_eident.cpp
  elf_meta_info.cpp
  elf_note.cpp
  elf_program_header_32.cpp
  elf_program_header_64.cpp
  elf_program_header_utils.cpp
  elf_reader_32.cpp
  elf_reader_64.cpp
  elf_relocation_32.cpp
  elf_relocation_64.cpp
  elf_relocation_add_32.cpp
  elf_relocation_add_64.cpp
  elf_relocation_utils.cpp
  elf_section_header_32.cpp
  elf_section_header_64.cpp
  elf_section_header_utils.cpp
  elf_symbol_32.cpp
  elf_symbol_64.cpp
  elf_symbol_info.cpp
  elf_symbol_utils.cpp
  elf_version.cpp
  elf_version_aux.cpp
  elf_version_need.cpp
  elf_version_need_aux.cpp
  elf_version_symbol.cpp
  elf_arm.cpp
  elf_mmix.cpp
  elf_xtensa.cpp )

set ( IO_ELF_HEADERS
  elf_common.hpp
  elf_dynamic_header_32.hpp
  elf_dynamic_header_64.hpp
  elf_dynamic_tag_32.hpp
  elf_dynamic_tag_64.hpp
  elf_file.hpp
  elf_file_header_32.hpp
  elf_file_header_64.hpp
  elf_file_header_utils.hpp
  elf_header_32.hpp
  elf_header_64.hpp
  elf_header_eident.hpp
  elf_meta_info.hpp
  elf_note.hpp
  elf_program_header_32.hpp
  elf_program_header_64.hpp
  elf_program_header_utils.hpp
  elf_reader_32.hpp
  elf_reader_64.hpp
  elf_relocation_32.hpp
  elf_relocation_64.hpp
  elf_relocation_add_32.hpp
  elf_relocation_add_64.hpp
  elf_relocation_utils.hpp
  elf_section_header_32.hpp
  elf_section_header_64.hpp
  elf_section_header_utils.hpp
  elf_symbol_32.hpp
  elf_symbol_64.hpp
  elf_symbol_info.hpp
  elf_symbol_utils.hpp
  elf_types.hpp
  elf_version.hpp
  elf_version_aux.hpp
  elf_version_need.hpp
  elf_version_need_aux.hpp
  elf_version_symbol.hpp
  elf_alpha.hpp
  elf_alpha.inl
  elf_arc.hpp
  elf_arc.inl
  elf_arm.hpp
  elf_arm.inl
  elf_avr.hpp
  elf_avr.inl
  elf_cris.hpp
  elf_cris.inl
  elf_d10v.hpp
  elf_d10v.inl
  elf_d30v.hpp
  elf_d30v.inl
  elf_dlx.hpp
  elf_dlx.inl
  elf_fr30.hpp
  elf_fr30.inl
  elf_frv.hpp
  elf_frv.inl
  elf_h8.hpp
  elf_h8.inl
  elf_hppa.hpp
  elf_hppa.inl
  elf_i370.hpp
  elf_i370.inl
  elf_i860.hpp
  elf_i860.inl
  elf_i960.hpp
  elf_i960.inl
  elf_ia64.hpp
  elf_ia64.inl
  elf_ip2k.hpp
  elf_ip2k.inl
  elf_iq2000.hpp
  elf_iq2000.inl
  elf_ix86.hpp
  elf_ix86.inl
  elf_m32r.hpp
  elf_m32r.inl
  elf_m68hc11.hpp
  elf_m68hc11.inl
  elf_m68k.hpp
  elf_m68k.inl
  elf_mcore.hpp
  elf_mcore.inl
  elf_mips.hpp
  elf_mips.inl
  elf_mmix.hpp
  elf_mmix.inl
  elf_mn10200.hpp
  elf_mn10200.inl
  elf_mn10300.hpp
  elf_mn10300.inl
  elf_msp430.hpp
  elf_msp430.inl
  elf_or32.hpp
  elf_or32.inl
  elf_pj.hpp
  elf_pj.inl
  elf_ppc.hpp
  elf_ppc.inl
  elf_ppc64.hpp
  elf_ppc64.inl
  elf_s390.hpp
  elf_s390.inl
  elf_sh.hpp
  elf_sh.inl
  elf_sparc.hpp
  elf_sparc.inl
  elf_v850.hpp
  elf_v850.inl
  elf_vax.hpp
  elf_vax.inl
  elf_x86_64.hpp
  elf_x86_64.inl
  elf_xstormy16.hpp
  elf_xstormy16.inl
  elf_xtensa.hpp
  elf_xtensa.inl )

include_directories ( ${REVERSE_SOURCE_DIR} )

add_library ( io_elf ${IO_ELF_SOURCES} ${IO_ELF_HEADERS} )

